--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-
+    <title>Los Pollos Hermanos | Styles</title>
+    <meta name="description" content="Style tile for Los Pollos Hermanos">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
