--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
+	<nav id="nav">
+		<ul>
+			<li>Home</li>
+			<li>Menu</li>
+			<li>Locations</li>
+			<li>Contact Us</li>
+		</ul>
+	</nav>
+
+	<header>
+
+
+	</header>
 
 
 
