--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 	</nav>
 
 	<header>
-
-
+		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" />
+		<h1>Los Pollos Hermanos</h1>
+		<p>"Where something delicious is always cooking."</p>
 	</header>
 
 
