Logo to img div and header seperated

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 		</ul>
 	</nav>
 
+	<div id="logo">
+		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
+	</div>
+
 	<header>
-		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" />
 		<h1>Los Pollos Hermanos</h1>
 		<p>"Where something delicious is always cooking."</p>
 	</header>
-
 
 
 
