--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
 		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
 	</div>
 
-	<header>
-		<h1>Los Pollos Hermanos</h1>
-		<p>"Where something delicious is always cooking."</p>
-	</header>
 
 	<main>
-		<p>Suspicio? Bene ... tunc ibimus? Quis uh ... CONEXUS locus his diebus? Quisque semper aliquid videtur, in volutpat mauris. Nolo enim dicere. Vobis neque ab aliis. Ego feci memetipsum explicans. Gus mortuus est. Lorem opus habeo.</p>
-		<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
-		<p>Ludum mutavit. Verbum est ex. Et ... sunt occidat. Videtur quod est super omne oppidum. Quis transfretavit tu iratus es contudit cranium cum dolor apparatus. Qui curis! Modo nobis certamen est, qui non credunt at.</p>
+		<header>
+			<h1>Los Pollos Hermanos</h1>
+			<p>"Where something delicious is always cooking."</p>
+		</header>
+
+		<section id="content">
+			<p>Suspicio? Bene ... tunc ibimus? Quis uh ... CONEXUS locus his diebus? Quisque semper aliquid videtur, in volutpat mauris. Nolo enim dicere. Vobis neque ab aliis. Ego feci memetipsum explicans. Gus mortuus est. Lorem opus habeo.</p>
+			<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
+		</section>
 	</main>
 
 
