Wrapper div to contain page elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		</ul>
 	</nav>
 
+<div id="wrapper">
 	<div id="logo">
 		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
 	</div>
@@ -35,6 +36,7 @@
 			<a href="#" class="button">Locations &rsaquo;</a>
 		</section>
 	</main>
+</div>
 
 
 
