Add fonts to h1, h2, p, and buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav id="nav">
@@ -22,6 +24,11 @@
 	<div id="logo">
 		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
 	</div>
+
+	<aside>
+		<h2>Header</h2>
+
+	</aside>
 
 
 	<main>
