--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 	</nav>
 
 <div id="wrapper">
-	<div id="logo">
-		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
-	</div>
 
 	<aside>
-		<h2>Header</h2>
+		<div id="logo">
+			<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
+		</div>
+
+		<div id="sidebar">
+			<h2>Header</h2>
+		</div>
 
 	</aside>
 
