Images added to bottom of main content

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
 			<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
 			<a href="#" class="button">Locations &rsaquo;</a>
 		</section>
+
+		<section id="images">
+			<img class="img1" src="img/lph_dinner.jpeg" alt="Chicken dinner at Los Pollos Hermanos" width="100%">
+			<img class="img2" src="img/chicken_bag.jpeg" alt="To go dinners" width="100%">
+			<img class="img3" src="img/chicken.jpg" alt="Spicy chicken" width="100%">
+		</section>
+
 	</main>
 </div>
 
