--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 		<section id="content">
 			<p>Suspicio? Bene ... tunc ibimus? Quis uh ... CONEXUS locus his diebus? Quisque semper aliquid videtur, in volutpat mauris. Nolo enim dicere. Vobis neque ab aliis. Ego feci memetipsum explicans. Gus mortuus est. Lorem opus habeo.</p>
 			<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
-			<a href="#" class="button">Locations &rsaquo;</a>
+			<p class="hyper"><a href="#">This is an example of a text link &rsaquo;</a><p>
+			<a href="#" class="button">Find Locations &rsaquo;</a>
 		</section>
 
 		<section id="images">
