Updated header texts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		</div>
 
 		<div id="sidebar">
-			<h2>Header</h2>
+			<h2>Example Sidebar</h2>
+
 		</div>
 
 	</aside>
@@ -36,8 +37,8 @@
 
 	<main>
 		<header>
-			<h1>Los Pollos Hermanos</h1>
-			<p>"Where something delicious is always cooking."</p>
+			<h1>This is an example of a header</h1>
+			<h2>This is an example of a subhead</h2>
 		</header>
 
 		<section id="content">
