--- a/index.html
+++ b/index.html
@@ -19,43 +19,40 @@
 			<li>Contact Us</li>
 		</ul>
 	</nav>
-
 <div id="wrapper">
-
 	<aside>
 		<div id="logo">
 			<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
 		</div>
-
 		<div id="sidebar">
 			<h2>Example Sidebar</h2>
-
+			<p>Ludum mutavit. Verbum est ex. Et ... sunt occidat.</p>
+			<p>Videtur quod est super omne oppidum. Quis transfretavit tu iratus es contudit cranium cum dolor apparatus.</p>
+			<p>Qui curis! Modo nobis certamen est, qui non credunt at.</p>
+			<a class="sidebar-link" href="#">Find out more &rsaquo;</a>
 		</div>
-
 	</aside>
-
-
 	<main>
 		<header>
 			<h1>This is an example of a header</h1>
 			<h2>This is an example of a subhead</h2>
 		</header>
-
 		<section id="content">
 			<p>Suspicio? Bene ... tunc ibimus? Quis uh ... CONEXUS locus his diebus? Quisque semper aliquid videtur, in volutpat mauris. Nolo enim dicere. Vobis neque ab aliis. Ego feci memetipsum explicans. Gus mortuus est. Lorem opus habeo.</p>
 			<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
 			<p class="hyper"><a href="#">This is an example of a text link &rsaquo;</a><p>
 			<a href="#" class="button">Find Locations &rsaquo;</a>
 		</section>
-
 		<section id="images">
-			<img class="img1" src="img/lph_dinner.jpeg" alt="Chicken dinner at Los Pollos Hermanos" width="100%">
-			<img class="img2" src="img/chicken_bag.jpeg" alt="To go dinners" width="100%">
-			<img class="img3" src="img/chicken.jpg" alt="Spicy chicken" width="100%">
+			<img class="img1" src="img/lph_dinner.jpeg" alt="Chicken dinner at Los Pollos Hermanos">
+			<img class="img2" src="img/chicken_bag.jpeg" alt="To go dinners">
+			<img class="img3" src="img/chicken.jpg" alt="Spicy chicken">
 		</section>
-
 	</main>
 </div>
+	<footer>
+		<p>Where something delicious is always cooking.</p>
+	</footer>
 
 
 
