Sidebar changed to include color scheme

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
 		</div>
 		<div id="sidebar">
-			<h2>Example Sidebar</h2>
-			<p>Ludum mutavit. Verbum est ex. Et ... sunt occidat.</p>
-			<p>Videtur quod est super omne oppidum. Quis transfretavit tu iratus es contudit cranium cum dolor apparatus.</p>
-			<p>Qui curis! Modo nobis certamen est, qui non credunt at.</p>
-			<a class="sidebar-link" href="#">Find out more &rsaquo;</a>
+			<h2>Colors</h2>
+			<div id="blue"></div>
+			<div id="red"></div>
+			<div id="yellow"></div>
+			<div id="grey"></div>
 		</div>
 	</aside>
 	<main>
