Respsonsive styles for min-width:300

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>Los Pollos Hermanos | Styles</title>
     <meta name="description" content="Style tile for Los Pollos Hermanos">
@@ -20,18 +21,9 @@
 		</ul>
 	</nav>
 <div id="wrapper">
-	<aside>
-		<div id="logo">
-			<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" width="250px" />
-		</div>
-		<div id="sidebar">
-			<h2>Colors</h2>
-			<div id="blue"></div>
-			<div id="red"></div>
-			<div id="yellow"></div>
-			<div id="grey"></div>
-		</div>
-	</aside>
+	<div id="logo">
+		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" />
+	</div>
 	<main>
 		<header>
 			<h1>This is an example of a header</h1>
@@ -49,6 +41,15 @@
 			<img class="img3" src="img/chicken.jpg" alt="Spicy chicken">
 		</section>
 	</main>
+	<aside>
+		<div id="sidebar">
+			<h2>Colors</h2>
+			<div id="blue"></div>
+			<div id="red"></div>
+			<div id="yellow"></div>
+			<div id="grey"></div>
+		</div>
+	</aside>
 </div>
 	<footer>
 		<p>Where something delicious is always cooking.</p>
