Letter spacing added to footer text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</aside>
 </div>
 	<footer>
-		<p>Where something delicious is always cooking.</p>
+		<p>Where Something Delicious is Always Cooking</p>
 	</footer>
 
 
