--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
 	<nav id="nav">
 		<ul>
-			<li>Home</li>
-			<li>Menu</li>
-			<li>Locations</li>
-			<li>Contact Us</li>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Menu</a></li>
+			<li><a href="#">Locations</a></li>
+			<li><a href="#">Contact Us</a></li>
 		</ul>
 	</nav>
 <div id="wrapper">
