--- a/index.html
+++ b/index.html
@@ -20,44 +20,42 @@
 			<li><a href="#">Contact Us</a></li>
 		</ul>
 	</nav>
-<div id="wrapper">
-	<div id="logo">
-		<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" />
-	</div>
-	<main>
-		<header>
-			<h1>This is an example of a header</h1>
-			<h2>This is an example of a subhead</h2>
-		</header>
-		<section id="content">
-			<p>Suspicio? Bene ... tunc ibimus? Quis uh ... CONEXUS locus his diebus? Quisque semper aliquid videtur, in volutpat mauris. Nolo enim dicere. Vobis neque ab aliis. Ego feci memetipsum explicans. Gus mortuus est. Lorem opus habeo.</p>
-			<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
-			<p class="hyper"><a href="#">This is an example of a text link &rsaquo;</a><p>
-			<a href="#" class="button">Find Locations &rsaquo;</a>
-		</section>
-		<section id="images">
-			<img class="img1" src="img/lph_dinner.jpeg" alt="Chicken dinner at Los Pollos Hermanos">
-			<img class="img2" src="img/chicken_bag.jpeg" alt="To go dinners">
-			<img class="img3" src="img/chicken.jpg" alt="Spicy chicken">
-		</section>
-	</main>
-	<aside>
-		<div id="sidebar">
-			<h2>Colors</h2>
-			<div id="blue"></div>
-			<div id="red"></div>
-			<div id="yellow"></div>
-			<div id="grey"></div>
+	<div id="wrapper">
+		<div id="logo">
+			<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" />
 		</div>
-	</aside>
-</div>
+		<main>
+			<header>
+				<h1>This is an example of a header</h1>
+				<h2>This is an example of a subhead</h2>
+			</header>
+			<section id="content">
+				<p>Suspicio? Bene ... tunc ibimus? Quis uh ... CONEXUS locus his diebus? Quisque semper aliquid videtur, in volutpat mauris. Nolo enim dicere. Vobis neque ab aliis. Ego feci memetipsum explicans. Gus mortuus est. Lorem opus habeo.</p>
+				<p>Jackson Isai? Tu quoque ... A te quidem a ante. Vos scitis quod blinking res Ive 'been vocans super vos? Et conteram illud, et conteram hoc. Maledicant druggie excors. Iam hoc tu facere conatus sum ad te in omni tempore?</p>
+				<p class="hyper">
+					<a href="#">This is an example of a text link &rsaquo;</a>
+				<p>
+				<a href="#" class="button">Find Locations &rsaquo;</a>
+			</section>
+			<section id="images">
+				<img class="img1" src="img/lph_dinner.jpeg" alt="Chicken dinner at Los Pollos Hermanos">
+				<img class="img2" src="img/chicken_bag.jpeg" alt="To go dinners">
+				<img class="img3" src="img/chicken.jpg" alt="Spicy chicken">
+			</section>
+		</main>
+		<aside>
+			<div id="sidebar">
+				<h2>Colors</h2>
+				<div id="blue"></div>
+				<div id="red"></div>
+				<div id="yellow"></div>
+				<div id="grey"></div>
+			</div>
+		</aside>
+	</div>
 	<footer>
 		<p>Where Something Delicious is Always Cooking</p>
 	</footer>
-
-
-
-
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
     <script src="js/main.js"></script>
