remove unneeded nesting

--- a/index.html
+++ b/index.html
@@ -43,14 +43,12 @@
 				<img class="img3" src="img/chicken.jpg" alt="Spicy chicken">
 			</section>
 		</main>
-		<aside>
-			<div id="sidebar">
-				<h2>Colors</h2>
-				<div id="blue"></div>
-				<div id="red"></div>
-				<div id="yellow"></div>
-				<div id="grey"></div>
-			</div>
+		<aside id="sidebar">
+			<h2>Colors</h2>
+			<div id="blue"></div>
+			<div id="red"></div>
+			<div id="yellow"></div>
+			<div id="grey"></div>
 		</aside>
 	</div>
 	<footer>
