logo should be clickable

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</nav>
 	<div id="wrapper">
 		<div id="logo">
-			<img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" />
+			<a href="/"><img src="img/lph_logo.png" alt="Los Pollos Hermanos logo" /></a>
 		</div>
 		<main>
 			<header>
